# xarray-for-bio

./: .gitignore  README.md  _config.yml  _toc.yml  contributing.md  existing-software.md  gallery.md  getting-help.md  intro.md  office-hours.md  pyproject.toml  test.md
.github/: PR_PREVIEW_SETUP.md
.github/workflows/: gh-pages.yml  pr-cleanup.yml  pr-preview-deploy.yml  pr-preview-gh-pages.yml  pr-preview-netlify.yml  pr-preview.yml
fake_cells_groupby.zarr/C/: zarr.json
fake_cells_groupby.zarr/C/c/: 0
fake_cells_groupby.zarr/cell_id/: zarr.json
fake_cells_groupby.zarr/cell_id/c/0/0/: 0  1
fake_cells_groupby.zarr/cell_id/c/0/1/: 0  1
fake_cells_groupby.zarr/cell_id/c/0/2/: 0  1
fake_cells_groupby.zarr/cell_id/c/0/3/: 0  1
fake_cells_groupby.zarr/cell_id/c/1/0/: 0  1
fake_cells_groupby.zarr/cell_id/c/1/1/: 0  1
fake_cells_groupby.zarr/cell_id/c/1/2/: 0  1
fake_cells_groupby.zarr/cell_id/c/1/3/: 0  1
fake_cells_groupby.zarr/cell_id/c/2/0/: 0  1
fake_cells_groupby.zarr/cell_id/c/2/1/: 0  1
fake_cells_groupby.zarr/cell_id/c/2/2/: 0  1
fake_cells_groupby.zarr/cell_id/c/2/3/: 0  1
fake_cells_groupby.zarr/cell_id/c/3/0/: 0  1
fake_cells_groupby.zarr/cell_id/c/3/1/: 0  1
fake_cells_groupby.zarr/cell_id/c/3/2/: 0  1
fake_cells_groupby.zarr/cell_id/c/3/3/: 0  1
fake_cells_groupby.zarr/images/: zarr.json
fake_cells_groupby.zarr/images/c/0/0/0/: 0  1  2  3
fake_cells_groupby.zarr/images/c/0/0/1/: 0  1  2  3
fake_cells_groupby.zarr/images/c/0/0/2/: 0  1  2  3
fake_cells_groupby.zarr/images/c/0/0/3/: 0  1  2  (+1 more)
gallery/: 2d_groupby.ipynb
(+176 files in other folders)
